fix chords overflow in portrait view

--- a/themes/chords/static/style.css
+++ b/themes/chords/static/style.css
@@ -161,6 +161,7 @@ details.metronome[open] summary::marker {
     min-height: 5rem;
     white-space: pre;
     padding-left: 3rem;
+    text-wrap: wrap;
 }
 .chords:not([chorus]) {
     counter-increment: verse;
